# ChatApp-prototype

./: .gitignore  Cargo.toml  todo
access_token/: private_key.pem  public_key.pem
refresh_token/: private_key.pem  public_key.pem
src/: domain.rs  lib.rs  main.rs  pipe.rs
src/backend/: auth.rs  handlers.rs  mod.rs  security-approach  utils.rs
src/domain/: jwt.rs  mod.rs  utility.rs
src/http/: mod.rs
src/http/io/: converter.rs  io_const.rs  mod.rs
src/http/resources/: auth_routes.rs  mod.rs  websocket.rs
static/: .jshintrc  chatroom.html  index.html  indx.js  login.html  main.css  package-lock.json  package.json  rooms.html  utils.js  webpack.config.js
static/js/: auth.js  index.js  utils.js
tests/: logic.rs  mod.rs  registration.rs  room.rs  signal_test.rs  texting.rs
