[package]
name = "actor_ws"
version = "0.1.0"
authors = ["lusamreth <lusamreth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
awc = "2.0.1"
actix-codec = "0.3.0"

[dependencies]
actix = "0.10.0"
actix-web = "3.2.0"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"
serde = "1.0.117"
uuid = {version = "0.8.1", features = ["v4","serde"]}
actix-files = "0.4.0"
env_logger = "0.8.1"
log = "0.4.11"
derive_more = "0.99.11"
regex = "1.4.2"
futures = "0.3.8"
serde_json = "1.0.59"